src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 608 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
